[tool.poetry]
name = "3"
version = "0.1.0"
description = ""
authors = ["git-alice <art.oxbow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
peewee = "^3.15.1"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
